fixed spacing on introblock

--- a/_static/src/assets/scss/objects/module/_introblock.scss
+++ b/_static/src/assets/scss/objects/module/_introblock.scss
@@ -9,8 +9,7 @@ Sections of content that introduce landing and story pages
     box-sizing: border-box;
     width: 100%;
     height: 200px;
-    // padding: 126px 0 45px;
-    padding: 45px 0;
+    padding: 126px 0 45px;
     position: relative;
     background: url("../media/images/icons/io-mark-bg.svg") no-repeat $CLR_GRAY_LIGHTER;
     background-position: -225px top;
